# models/libshelf.go
@@ -1,0 +1,45 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package models
+
+import (
+	"time"
+)
+
+const TableNameLibshelf = "libshelf"
+
+// Libshelf mapped from table <libshelf>
+type Libshelf struct {
+	ID                   string     `gorm:"column:Id;type:varchar(32);primaryKey" json:"Id"`
+	CreationTime         time.Time  `gorm:"column:CreationTime;type:datetime(6);not null" json:"CreationTime"`
+	CreatorUserID        *int64     `gorm:"column:CreatorUserId;type:bigint(20)" json:"CreatorUserId"`
+	LastModificationTime *time.Time `gorm:"column:LastModificationTime;type:datetime(6)" json:"LastModificationTime"`
+	LastModifierUserID   *int64     `gorm:"column:LastModifierUserId;type:bigint(20)" json:"LastModifierUserId"`
+	IsDeleted            []uint8    `gorm:"column:IsDeleted;type:bit(1);not null" json:"IsDeleted"`
+	DeleterUserID        *int64     `gorm:"column:DeleterUserId;type:bigint(20)" json:"DeleterUserId"`
+	DeletionTime         *time.Time `gorm:"column:DeletionTime;type:datetime(6)" json:"DeletionTime"`
+	Code                 *string    `gorm:"column:Code;type:varchar(32)" json:"Code"`
+	Name                 *string    `gorm:"column:Name;type:varchar(128)" json:"Name"`
+	ShelfNo              int64      `gorm:"column:ShelfNo;type:int(11);not null" json:"ShelfNo"`
+	Side                 *string    `gorm:"column:Side;type:varchar(32)" json:"Side"`
+	RowIdentity          string     `gorm:"column:RowIdentity;type:varchar(32);not null" json:"RowIdentity"`
+	RfidReaderID         *string    `gorm:"column:RfidReaderId;type:varchar(32)" json:"RfidReaderId"`
+	SerialPortID         *string    `gorm:"column:SerialPortId;type:varchar(32)" json:"SerialPortId"`
+	IsEnable             []uint8    `gorm:"column:IsEnable;type:bit(1);not null" json:"IsEnable"`
+	X1                   *float64   `gorm:"column:X1;type:decimal(7,2)" json:"X1"`
+	Y1                   *float64   `gorm:"column:Y1;type:decimal(7,2)" json:"Y1"`
+	X2                   *float64   `gorm:"column:X2;type:decimal(7,2)" json:"X2"`
+	Y2                   *float64   `gorm:"column:Y2;type:decimal(7,2)" json:"Y2"`
+	Angel                *float64   `gorm:"column:Angel;type:decimal(7,2)" json:"Angel"`
+	StructID             *string    `gorm:"column:StructId;type:varchar(255)" json:"StructId"`
+	Remark               *string    `gorm:"column:Remark;type:varchar(256)" json:"Remark"`
+	TenantID             int64      `gorm:"column:TenantId;type:int(11);not null" json:"TenantId"`
+	IsBosseyed           []uint8    `gorm:"column:IsBosseyed;type:bit(1);not null;default:0" json:"IsBosseyed"`
+}
+
+// TableName Libshelf's table name
+func (*Libshelf) TableName() string {
+	return TableNameLibshelf
+}
